# Fwog

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: cmake.yml
docs/: CMakeLists.txt  Doxyfile.in  basics.rst  conf.py  index.rst  pipelines.rst  reference.rst  rendering.rst
example/: 01_hello_triangle.cpp  02_deferred.cpp  03_gltf_viewer.cpp  04_volumetric.cpp  05_gpu_driven.cpp  06_msaa.cpp  07_cpp_triangle.cpp  CMakeLists.txt  README.md  app_hello_square.cpp  common.cpp  common.h  deferred.cpp  example.cpp  gltf_viewer.cpp  gpu_driven.cpp  hello_triangle.cpp  volumetric.cpp
example/common/: AppImage.h  Application.cpp  Application.h  RsmTechnique.cpp  RsmTechnique.h  SceneLoader.cpp  SceneLoader.h  common.cpp  common.h
example/models/: README.md  hierarchyTest.glb  simple_scene.glb
example/shaders/: FullScreenTri.vert.glsl  RSMIndirect.comp.glsl  RSMIndirectDitheredFiltered.comp.glsl  RSMScene.frag.glsl  RSMScenePbr.frag.glsl  SceneDeferred.frag.glsl  SceneDeferred.vert.glsl  SceneDeferredPbr.frag.glsl  SceneDeferredPbr.vert.glsl  SceneDeferredSimple.vert.glsl  SceneForward.vert.glsl  SceneShadow.vert.glsl  ShadeDeferred.frag.glsl  ShadeDeferredPbr.frag.glsl  ShadeDeferredSimple.frag.glsl  Texture.frag.glsl  TonemapAndDither.frag.glsl
example/shaders/clustered/: MarkVisibleClusters.comp.glsl
example/shaders/gpu_driven/: BoundingBox.vert.glsl  Common.h  CullVisibility.frag.glsl  SceneForward.frag.glsl  SceneForward.vert.glsl  SolidColor.frag.glsl
example/shaders/rsm/: Bilateral.h.glsl  Bilateral3x3.comp.glsl  Bilateral5x5.comp.glsl  BlitTexture.comp.glsl  Common.h.glsl  ComputeVariance5x5.comp.glsl  Indirect.comp.glsl  IndirectDitheredFiltered.comp.glsl  Kernels.h.glsl  Modulate.comp.glsl  ModulateUpscale.comp.glsl  Reproject.comp.glsl  Reproject2.comp.glsl
example/shaders/volumetric/: ApplyVolumetricsDeferred.comp.glsl  CellLightingAndDensity.comp.glsl  Common.h  GaussianBlur.comp.glsl  MarchVolume.comp.glsl  TonemapAndDither.comp.glsl  accumulateDensity.comp.glsl  applyDeferred.comp.glsl  common.h  depth2exponential.comp.glsl  frog.h  gaussianBlur.comp.glsl  marchVolume.comp.glsl  tonemapAndDither.comp.glsl
example/textures/: fog_mie_data.txt
include/Fwog/: BasicTypes.h  Buffer.h  Common.h  Config.h  Context.h  DebugMarker.h  Exception.h  Fence.h  Pipeline.h  Rendering.h  Shader.h  Texture.h  Timer.h
include/Fwog/detail/: ApiToEnum.h  ContextState.h  Flags.h  FramebufferCache.h  Hash.h  PipelineManager.h  SamplerCache.h  ShaderCPP.h  ShaderGLSL.h  ShaderSPIRV.h  VertexArrayCache.h
include/fwog/: BasicTypes.h  Buffer.h  Fence.h  Indirect.h  Pipeline.h  Rendering.h  Shader.h  Texture.h  Timer.h
include/fwog/detail/: ApiToEnum.h  FramebufferCache.h  Hash.h  PipelineManager.h  SamplerCache.h  VertexArrayCache.h
include/gsdf/: BasicTypes.h  Buffer.h  Common.h  DebugMarker.h  Fence.h  Flags.h  Framebuffer.h  Indirect.h  Pipeline.h  Rendering.h  Shader.h  Texture.h  Timer.h
include/gsdf/detail/: ApiToEnum.h  Flags.h  FramebufferCache.h  Hash.h  PipelineManager.h  SamplerCache.h  VertexArrayCache.h
src/: Buffer.cpp  Context.cpp  DebugMarker.cpp  Fence.cpp  Framebuffer.cpp  Pipeline.cpp  Rendering.cpp  Shader.cpp  Texture.cpp  Timer.cpp
src/detail/: ApiToEnum.cpp  FramebufferCache.cpp  PipelineManager.cpp  SamplerCache.cpp  ShaderCPP.cpp  ShaderGLSL.cpp  ShaderSPIRV.cpp  VertexArrayCache.cpp
